--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="style_commerce.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
 
-    <nav class="navbar navbar-inverse ">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class=" container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#hamburguesa">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">E-commerce</a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="hamburguesa">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Carreta</a></li>
             <li><a href="#">Salir</a></li>
@@ -30,36 +29,33 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-<!-- navbar-fixed-top -->
-
     <div class="container">
       <div class="row">
         <div class="col-md-3">
 
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for...">
+            <input type="text" class="form-control" placeholder="Buscar camisetas">
             <span class="input-group-btn">
-              <button class="btn btn-default" type="button">Go!</button>
+              <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
             </span>
           </div>
-
           <br>
 
-          <ul class="nav nav-pills nav-stacked">
-            <li role="presentation" class="active"><a href="#">Todos</a></li>
-            <li role="presentation"><a href="#">Hombre</a></li>
-            <li role="presentation"><a href="#">Mujer</a></li>
-            <li role="presentation"><a href="#">Hipster</a></li>
-            <li role="presentation"><a href="#">Metal</a></li>
-            <li role="presentation"><a href="#">Universidad</a></li>
-            <li role="presentation"><a href="#">Deportiva</a></li>
-            <li role="presentation"><a href="#">Rayas</a></li>
-            <li role="presentation"><a href="#">Apretad</a></li>
+          <h2 class="hidden-sm hidden-xs">Categorías</h2>
+          <ul class="list-group hidden-md-down hidden-sm hidden-xs">
+            <li class="list-group-item active">Todos <span class="badge">100</span></li>
+            <li class="list-group-item"><a href="#">Hombre</a><span class="badge">20</span></li>
+            <li class="list-group-item"><a href="#">Mujer</a><span class="badge">10</span></li>
+            <li class="list-group-item"><a href="#">Hipster</a><span class="badge">16</span></li>
+            <li class="list-group-item"><a href="#">Metal</a><span class="badge">17</span></li>
+            <li class="list-group-item"><a href="#">Universidad</a><span class="badge">15</span></li>
+            <li class="list-group-item"><a href="#">Deportiva</a><span class="badge">5</span></li>
+            <li class="list-group-item"><a href="#">Rayas</a><span class="badge">7</span></li>
+            <li class="list-group-item"><a href="#">Apretad</a><span class="badge">10</span></li>
           </ul>
 
         </div>
         <div class="col-md-9">
-
           <div class="row">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
@@ -97,64 +93,155 @@
           </div>
           <br>
           <div class="row">
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem;">
+            <div class="col-sm-4 col-xs-6">
+              <div class="card">
                 <img class="card-img-top" src="producto1.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title"> <strong>Hipster Ultimate</strong> </h5>
+                  <p class="card-text">La camiseta ideal para hipsters</p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">$229 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+                  <!-- <a href="#" class="btn btn-secondary">Detalles</a> -->
+
+
+
+
+
+
+                  <!-- Trigger the modal with a button -->
+                    <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Detalles</button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="myModal" role="dialog">
+                      <div class="modal-dialog">
+
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Hipster Ultimate</h4>
+                          </div>
+                          <div class="modal-body">
+                            <div class="alert alert-info" role="alert"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Este producto está agotado</div>
+                            <div class="container">
+                              <div class="row">
+                                <div class="col-xs-3">
+                                  <img src="producto1.jpg" alt="producto1" style="width: 260px;">
+                                  <!-- <div>hola</div> -->
+                                </div>
+                                <div class="col-xs-6">
+                                  <div>Precio <strong>$229</strong> </div>
+                                  <br>
+                                  <div>Calificación  <span class="glyphicon glyphicon-star" aria-hidden="true"></span> <span class="glyphicon glyphicon-star" aria-hidden="true"></span> <span class="glyphicon glyphicon-star" aria-hidden="true"></span> <span class="glyphicon glyphicon-star" aria-hidden="true"></span> <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> </div>
+                                  <br>
+                                  <button type="button" class="btn btn-warning">Hipster</button>
+                                  <button type="button" class="btn">Deportiva</button>
+                                  <br>
+                                  <br>
+                                  <a href="#"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Agrega a los deseos </a>
+                                </div>
+                              </div>
+                            </div>
+                            <br>
+
+                            <!-- <p>Some text in the modal.</p> -->
+                            <ul class="nav nav-tabs">
+                              <li class="active"><a data-toggle="tab" href="#descripcion">Descripción</a></li>
+                              <li><a data-toggle="tab" href="#comments">Comentarios</a></li>
+                            </ul>
+
+                            <div class="tab-content">
+                              <div id="descripcion" class="tab-pane fade in active">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                              </div>
+                              <div id="comments" class="tab-pane fade">
+                                <table class="table table-striped">
+                                  <tr>
+                                    <td>Pablo Uribe comentó hace 2 días</td>
+                                  </tr>
+                                  <tr>
+                                    <td>Esta camiseta es la verga. La quiero</td>
+                                  </tr>
+                                </table>
+                                <textarea name="name" rows="7" cols="68" placeholder="Ingresa un comentario"></textarea>
+                                <!-- <form class="" method="post">
+                                  <input type="text" name="comentario" placeholder="Ingresa un comentario">
+                                </form> -->
+                              </div>
+                            </div>
+
+
+
+
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn btn-primary">Comprar</button>
+                          </div>
+                        </div>
+
+                      </div>
+                    </div>
+
+
+
+
+
+
+
+
+
+
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem;">
+            <div class="col-sm-4 col-xs-6">
+              <div class="card">
                 <img class="card-img-top" src="producto2.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title"><strong>On Motion Live</strong></h5>
+                  <p class="card-text">Perfecta para salidas rocosas</p>
+                  <a href="#" class="btn btn-primary">$250 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+                  <a href="#" class="btn btn-secondary">Detalles</a>
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem;">
+            <div class="col-sm-4 col-xs-6">
+              <div class="card">
                 <img class="card-img-top" src="producto3.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title"> <strong>Underground Max</strong> </h5>
+                  <p class="card-text">Para los amantes del Underground</p>
+                  <a href="#" class="btn btn-primary">$230 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+                  <a href="#" class="btn btn-secondary">Detalles</a>
                 </div>
               </div>
             </div>
-          </div>
-          <br>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem;">
+            <br>
+            <div class="col-sm-4 col-xs-6">
+              <div class="card">
                 <img class="card-img-top" src="producto4.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title"><strong>Awesome</strong></h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">$229 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+                  <a href="#" class="btn btn-secondary">Detalles</a>
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem;">
+            <div class="col-sm-4 col-xs-6">
+              <div class="card">
                 <img class="card-img-top" src="producto5.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title"><strong>Cualquier cosa</strong></h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">$229 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+                  <a href="#" class="btn btn-secondary">Detalles</a>
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
-
-            </div>
           </div>
-
         </div>
       </div>
     </div>
