--- a/index.html
+++ b/index.html
@@ -102,13 +102,6 @@
                 </div>
                 <div class="card-footer">
                   <a href="#" class="btn btn-primary">$229 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
-                  <!-- <a href="#" class="btn btn-secondary">Detalles</a> -->
-
-
-
-
-
-
                   <!-- Trigger the modal with a button -->
                     <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Detalles</button>
 
@@ -126,11 +119,11 @@
                             <div class="alert alert-info" role="alert"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Este producto está agotado</div>
                             <div class="container">
                               <div class="row">
-                                <div class="col-xs-3">
+                                <div class="col-xs-6 col-md-3">
                                   <img src="producto1.jpg" alt="producto1" style="width: 260px;">
                                   <!-- <div>hola</div> -->
                                 </div>
-                                <div class="col-xs-6">
+                                <div class="col-xs-6 col-md-6">
                                   <div>Precio <strong>$229</strong> </div>
                                   <br>
                                   <div>Calificación  <span class="glyphicon glyphicon-star" aria-hidden="true"></span> <span class="glyphicon glyphicon-star" aria-hidden="true"></span> <span class="glyphicon glyphicon-star" aria-hidden="true"></span> <span class="glyphicon glyphicon-star" aria-hidden="true"></span> <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> </div>
@@ -144,13 +137,11 @@
                               </div>
                             </div>
                             <br>
-
                             <!-- <p>Some text in the modal.</p> -->
                             <ul class="nav nav-tabs">
                               <li class="active"><a data-toggle="tab" href="#descripcion">Descripción</a></li>
                               <li><a data-toggle="tab" href="#comments">Comentarios</a></li>
                             </ul>
-
                             <div class="tab-content">
                               <div id="descripcion" class="tab-pane fade in active">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -170,10 +161,6 @@
                                 </form> -->
                               </div>
                             </div>
-
-
-
-
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
