--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -32,7 +32,6 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Buscar camisetas">
             <span class="input-group-btn">
@@ -40,7 +39,6 @@
             </span>
           </div>
           <br>
-
           <h2 class="hidden-sm hidden-xs">Categorías</h2>
           <ul class="list-group hidden-md-down hidden-sm hidden-xs">
             <li class="list-group-item active">Todos <span class="badge">100</span></li>
@@ -53,7 +51,6 @@
             <li class="list-group-item"><a href="#">Rayas</a><span class="badge">7</span></li>
             <li class="list-group-item"><a href="#">Apretad</a><span class="badge">10</span></li>
           </ul>
-
         </div>
         <div class="col-md-9">
           <div class="row">
@@ -104,7 +101,6 @@
                   <a href="#" class="btn btn-primary">$229 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
                   <!-- Trigger the modal with a button -->
                     <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Detalles</button>
-
                     <!-- Modal -->
                     <div class="modal fade" id="myModal" role="dialog">
                       <div class="modal-dialog">
@@ -167,19 +163,8 @@
                             <button type="button" class="btn btn-primary">Comprar</button>
                           </div>
                         </div>
-
                       </div>
                     </div>
-
-
-
-
-
-
-
-
-
-
                 </div>
               </div>
             </div>
